--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.56.2",
     "@types/uuid": "^10.0.0",
+    "caniuse-lite": "^1.0.30001724",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -50,6 +51,7 @@
     "framer-motion": "^12.14.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "netlify-cli": "^21.6.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -67,7 +69,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@remix-run/dev": "^2.16.7",
+    "@remix-run/dev": "^2.16.8",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
