--- a/.github/workflows/pr-sync.yml
+++ b/.github/workflows/pr-sync.yml
@@ -34,4 +34,4 @@ jobs:
         title: "Sync from source repository"
         body: "Automatic sync from reference-web-966b2c83"
         base: main
-        branch: "sync-$(date +%s)"
+        branch: "sync-${{ github.run_id }}"
